--- a/java/demo/build.gradle
+++ b/java/demo/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+	implementation 'mysql:mysql-connector-java:8.3'
 }
 
 tasks.named('test') {
